<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <POU Name="POU_COM" Id="{d70bdf27-8797-4bac-87aa-9f251af83b06}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM POU_COM
VAR
	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//Instantiate COM 
//NC-PTM-01
(*Instanitate Serial port com function *) 

K4S8_DRL_03_E12_fbSerialLineControl(
	Mode:= SERIALLINEMODE_EL6_22B,
	pComIn:= ADR(K4S8_DRL_03_E12_stComIn),
	pComOut:=ADR(K4S8_DRL_03_E12_stComOut),
	SizeComIn:= SIZEOF(K4S8_DRL_03_E12_stComIn),
	TxBuffer:= K4S8_DRL_03_E12_EL6021_SerialTXBuffer,
	RxBuffer:= K4S8_DRL_03_E12_EL6021_SerialRXBuffer,
	Error=> ,
	ErrorID=> );

//NC-PTM-02
(*Instanitate Serial port com function *) 

K4S8_DRL_03_E15_fbSerialLineControl(
	Mode:= SERIALLINEMODE_EL6_22B,
	pComIn:= ADR(K4S8_DRL_03_E15_stComIn),
	pComOut:=ADR(K4S8_DRL_03_E15_stComOut),
	SizeComIn:= SIZEOF(K4S8_DRL_03_E15_stComIn),
	TxBuffer:= K4S8_DRL_03_E15_EL6021_SerialTXBuffer,
	RxBuffer:= K4S8_DRL_03_E15_EL6021_SerialRXBuffer,
	Error=> ,
	ErrorID=> );	

//DP1-PTM-01
(*Instanitate Serial port com function *) 

K4S8_DRL_03_E18_fbSerialLineControl(
	Mode:= SERIALLINEMODE_EL6_22B,
	pComIn:= ADR(K4S8_DRL_03_E18_stComIn),
	pComOut:=ADR(K4S8_DRL_03_E18_stComOut),
	SizeComIn:= SIZEOF(K4S8_DRL_03_E18_stComIn),
	TxBuffer:= K4S8_DRL_03_E18_EL6021_SerialTXBuffer,
	RxBuffer:= K4S8_DRL_03_E18_EL6021_SerialRXBuffer,
	Error=> ,
	ErrorID=> );	
]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>